--- a/src/app/componentes/pensamentos/editar-pensamento/editar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/editar-pensamento/editar-pensamento.component.html
@@ -1,4 +1,4 @@
-<section class="container criar-pensamentos ff-inter" xmlns="http://www.w3.org/1999/html">
+<section class="container editar-pensamentos ff-inter" xmlns="http://www.w3.org/1999/html">
   <header class="header">
     <h2>Adicione um <br>pensamento novo:</h2>
   </header>
@@ -91,7 +91,7 @@
 
     </div>
     <div class="acoes">
-      <button (click)="criarPensamento()" class="botao">Salvar</button>
+      <button (click)="editarPensamento()" class="botao">Salvar</button>
       <button (click)="cancelar()" class="botao">Cancelar</button>
     </div>
   </form>
